# muPromote-code

./: .gitmodules  README.md
base/: cabal.nix  muPromote-base.cabal
base/src/MuPromote/Common/: NodeSignature.hs  Persist.hs  ProcessorSignature.hs  PromotableItem.hs  ProviderSignature.hs
base/src/MuPromote/Common/HTTP/: Client.hs
base/test/: unit-main.hs
base/test/MuPromote/Test/Unit/: Persist.hs  PromotableItem.hs  Runner.hs
base/test/System/EncapsulatedResources/Test/: EncapsulatedResources.hs
collectors/nix/: .ghci  collector-nix-main.hs  default.nix  mupromote-collector-nix.cabal
collectors/nix/src/MuPromote/Collector/: Nix.hs
collectors/nix/src/MuPromote/Collector/Nix/: Main.hs
collectors/nix/test/: test-main.hs
collectors/nix/test/MuPromote/Test/Integration/: NixCollector.hs
collectors/packagekit/: README.md  default.nix  muPromote-packagekit.cabal
collectors/packagekit/Common/: Misc.hs  WebAux.hs
collectors/packagekit/Common/Package/: API.hs  Package.hs  Project.hs
collectors/packagekit/MuPromote/Client/: Main.hs  PackageKitDBus.hs
nix/: default.nix  haskell-packages.nix  nix-gen-cabal.nix  nixpkgs.nix
nix/development-envs/: base.nix  collector-nix.nix  dev-env.nix  node.nix  processors.nix
node/: .ghci  README.md  cabal.nix  default.nix  muPromote-node.cabal  node-main-devel.hs  node-main.hs  node-ui.nix
node/node-ui/: index.html
node/node-ui-test/: SpecRunner.html  node-ui
node/node-ui-test/gui/: Application.html  EnrolledItems.html  PromotableItemEnroller.html
node/node-ui-test/spec/: PromotableItemEnroller.js
node/node-ui/app/: Application.css  Application.js  EnrolledItemsList.html  EnrolledItemsService.js  PromotableItemEnroller.html  PromotableItemEnroller.js
node/noderes-dev/muPromote-node/: WebUI-Dir
node/src/MuPromote/Node/: Base.hs  Main.hs  Operations.hs  Persist.hs  PromotionProcessorClient.hs  PromotionProviderClient.hs  Web.hs
node/test/: unit-main.hs
node/test/MuPromote/Test/Unit/: NodeResource.hs  Operations.hs  Persist.hs  PromotableItem.hs  PromotionProcessorClient.hs  PromotionProviderClient.hs
processors/: cabal.nix  kudo-main.hs  muPromote-processors.cabal
processors/kudo-ui/: index.html
processors/kudo-ui-test/: SpecRunner.html  kudo-ui
processors/kudo-ui-test/gui/: Application.html
processors/kudo-ui/app/: Application.css  Application.js  EnrolledItemsList.js
processors/kudores-dev/muPromote-kudo/: WebUI-Dir
processors/kudores-dev/muPromote-kudo/Storage/reports/: bGlzdEhpZ2hzY29yZQ==
processors/src/MuPromote/Processor/: Kudo.hs  KudoWeb.hs
processors/src/MuPromote/Processor/Kudo/: Application.hs  Main.hs  Operations.hs
processors/src/MuPromote/Provider/: Kudo.hs  KudoWeb.hs
processors/src/MuPromote/Provider/Kudo/: Main.hs
processors/src/Network/Wai/: Utils.hs
processors/test/: unit-main.hs
processors/test/MuPromote/Test/Unit/: PromotionProcessor.hs  PromotionProcessorResource.hs  PromotionProcessorWeb.hs  PromotionProvider.hs  PromotionProviderResource.hs  PromotionProviderWeb.hs  Runner.hs
