name:           muPromote-base
version:        0.1.0.0
synopsis:       Common types and definitions for μPromote applications
description:    Common types and definitions for μPromote applications, such as api types.
homepage:       http://mupromote.net
license:        GPL-3
license-file:   LICENSE
author:         Philip Lykke Carlsen
maintainer:     plcplc@gmail.com
build-type:     Simple
cabal-version:  >=1.10

flag releaseBuild
  description:  Build for release. I.e. enable more checks.
  default:      True
  manual:       True

library

  exposed-modules:
    MuPromote.Common.PromotableItem
    MuPromote.Common.NodeSignature
    MuPromote.Common.ProviderSignature
    MuPromote.Common.HTTP.Client

  build-depends:
    aeson,
    base >=4.6 && <4.7,
    http-client,
    network,
    typed-rest-types

  hs-source-dirs: src

  default-language: Haskell2010

  if flag(releaseBuild)
    ghc-options: -Wall -fno-warn-unused-do-bind -Werror
  else
    ghc-options: -Wall -fno-warn-unused-do-bind
