name:           muPromote-base
version:        0.1.0.0
synopsis:       Common types and definitions for μPromote applications
description:    Common types and definitions for μPromote applications, such as api types.
homepage:       http://mupromote.net
license:        GPL-3
license-file:   LICENSE
author:         Philip Lykke Carlsen
maintainer:     plcplc@gmail.com
build-type:     Simple
cabal-version:  >=1.10

flag releaseBuild
  description:  Build for release. I.e. enable more checks.
  default:      True
  manual:       True

library

  exposed-modules:
    MuPromote.Common.HTTP.Client
    MuPromote.Common.NodeSignature
    MuPromote.Common.Persist
    MuPromote.Common.ProcessorSignature
    MuPromote.Common.PromotableItem

  build-depends:
    aeson,
    base == 4.7.*,
    base64-bytestring,
    bytestring,
    cereal,
    containers,
    directory,
    http-client,
    network,
    safecopy,
    text,
    typed-rest-types

  hs-source-dirs: src

  default-language: Haskell2010

  if flag(releaseBuild)
    ghc-options: -Wall -fno-warn-unused-do-bind -Werror
  else
    ghc-options: -Wall -fno-warn-unused-do-bind

test-suite unittest

  type: exitcode-stdio-1.0
  main-is: unit-main.hs

  Other-Modules:
    MuPromote.Test.Unit.Persist
    MuPromote.Test.Unit.Runner
    -- Duplicated from encapsulated-resources.
    System.EncapsulatedResources.Test.EncapsulatedResources

  hs-source-dirs: test

  if flag(releaseBuild)
    ghc-options: -Wall -fno-warn-unused-do-bind -Werror
  else
    ghc-options: -Wall -fno-warn-unused-do-bind

  build-depends:
    base == 4.7.*,
    bytestring,
    containers,
    data-default,
    encapsulated-resources,
    hspec,
    muPromote-base,
    stm,
    text,
    transformers

  default-language: Haskell2010
