name:      muPromote-processors
version:   0.1.0.0
synopsis:  The core library for the μPromote promotion processors
description:
  μPromote processors are the component of μPromote that actually delivers
  promotions.
homepage:       http://mupromote.net
license:        GPL-3
license-file:   LICENSE
author:         Philip Lykke Carlsen
maintainer:     plcplc@gmail.com
build-type:     Simple
cabal-version:  >=1.10

flag releaseBuild
  description:  Build for release. I.e. enable more checks.
  default:      True
  manual:       True

library

  exposed-modules:
    MuPromote.Processor.Kudo
    MuPromote.Processor.Kudo.Main
    MuPromote.Processor.Kudo.Application
    MuPromote.Processor.Kudo.Operations
    Network.Wai.Utils

  build-depends:
    aeson,
    base >=4.6 && <4.7,
    bytestring,
    cereal,
    conduit,
    containers,
    data-default,
    directory,
    encapsulated-resources,
    http-client,
    http-types,
    muPromote-base,
    network,
    resourcet,
    safecopy,
    stm,
    text,
    transformers,
    typed-rest-server,
    unix,
    wai,
    wai-app-static,
    warp

  hs-source-dirs: src

  default-language: Haskell2010

  if flag(releaseBuild)
    ghc-options: -Wall -fno-warn-unused-do-bind -Werror
  else
    ghc-options: -Wall -fno-warn-unused-do-bind

Executable kudo

  Main-Is: kudo-main.hs

  Build-Depends:
    base >=4.6 && <4.7,
    encapsulated-resources,
    muPromote-processors

  default-language: Haskell2010

test-suite unittest
  type: exitcode-stdio-1.0
  main-is: unit-main.hs

  Other-Modules:
    MuPromote.Test.Unit.PromotableItem,
    MuPromote.Test.Unit.PromotionProcessorResource,
    MuPromote.Test.Unit.PromotionProcessorWeb,
    MuPromote.Test.Unit.Runner
    -- Duplicated from encapsulated-resources
    System.EncapsulatedResources.Test.EncapsulatedResources

  hs-source-dirs: test

  if flag(releaseBuild)
    ghc-options: -Wall -fno-warn-unused-do-bind -Werror
  else
    ghc-options: -Wall -fno-warn-unused-do-bind

  build-depends:
    aeson,
    base >=4.6 && <4.7,
    bytestring,
    conduit,
    containers,
    data-default,
    encapsulated-resources,
    muPromote-base,
    muPromote-processors,
    hspec,
    http-client,
    http-types,
    stm,
    text,
    transformers,
    wai,
    wai-test,
    warp

  default-language: Haskell2010
