name:     muPromote-collector-nix
version:  0.1.0.0
synopsis: A collector that generates promotable items from nix derivations.
description:
  This collector is a standalone program, that when run inspects the nix store
  of its host system, generates promotable items from the derivations it finds
  and transmits them to the μPromote node.
homepage:      http://mupromote.org
license:       GPL-3
license-file:  LICENSE
author:        Philip Lykke Carlsen
maintainer:    plcplc@gmail.com
build-type:    Simple
cabal-version: >=1.10

flag releaseBuild

  description: Build for release. I.e. enable more checks.
  default:     True
  manual:      True

library

  exposed-modules:
    MuPromote.Collector.Nix

  build-depends:
    aeson,
    base == 4.7.*,
    bytestring,
    cereal,
    conduit,
    containers,
    data-default,
    directory,
    encapsulated-resources,
    http-client,
    http-types,
    muPromote-base,
    network,
    safecopy,
    process,
    text,
    transformers,
    typed-rest-client,
    unordered-containers,
    unix

  hs-source-dirs: src

  default-language: Haskell2010

  if flag(releaseBuild)
    ghc-options: -Wall -fno-warn-unused-do-bind -Werror
  else
    ghc-options: -Wall -fno-warn-unused-do-bind

Executable mupromote-collector-nix

  Main-Is: collector-nix-main.hs

  Build-Depends:
    base == 4.7.*,
    encapsulated-resources,
    muPromote-collector-nix

  default-language: Haskell2010

test-suite unit-and-integration

  type: exitcode-stdio-1.0
  main-is: test-main.hs

  Other-Modules:
    MuPromote.Test.Unit.Runner
    MuPromote.Test.Integration.NixCollector
    -- Duplicated from encapsulated-resources.
    -- System.EncapsulatedResources.Test.EncapsulatedResources

  hs-source-dirs: test

  if flag(releaseBuild)
    ghc-options: -Wall -fno-warn-unused-do-bind -Werror
  else
    ghc-options: -Wall -fno-warn-unused-do-bind

  build-depends:
    aeson,
    base == 4.7.*,
    bytestring,
    containers,
    data-default,
    encapsulated-resources,
    hspec,
    hspec-expectations,
    http-client,
    http-types,
    muPromote-base,
    muPromote-collector-nix,
    text,
    transformers

  default-language: Haskell2010
